feat: initial compose commit

--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -25,6 +25,15 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:listitem="@tools:sample/avatars" />
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/payButton"
         style="@style/Widget.App.Button"
